Project Folder/IFN660_Java_ECMAScript/NativeCompiler/Parser.output
Grammar

    0 $accept: Program $end

    1 Program: Statement

    2 Statement: IF '(' Expression ')' Statement ELSE Statement
    3          | '{' StatementList '}'
    4          | Expression ';'
    5          | Type IDENT ';'

    6 Type: INT
    7     | BOOL

    8 StatementList: StatementList Statement
    9              | /* empty */

   10 Expression: NUMBER
   11           | IDENT
   12           | Expression '=' Expression
   13           | Expression '+' Expression
   14           | Expression '<' Expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2
')' (41) 2
'+' (43) 13
';' (59) 4 5
'<' (60) 14
'=' (61) 12
'{' (123) 3
'}' (125) 3
error (256)
NUMBER (258) 10
IDENT (259) 5 11
IF (260) 2
ELSE (261) 2
INT (262) 6
BOOL (263) 7


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
Program (18)
    on left: 1, on right: 0
Statement (19)
    on left: 2 3 4 5, on right: 1 2 8
Type (20)
    on left: 6 7, on right: 5
StatementList (21)
    on left: 8 9, on right: 3 8
Expression (22)
    on left: 10 11 12 13 14, on right: 2 4 12 13 14


State 0

    0 $accept: . Program $end

    NUMBER  shift, and go to state 1
    IDENT   shift, and go to state 2
    IF      shift, and go to state 3
    INT     shift, and go to state 4
    BOOL    shift, and go to state 5
    '{'     shift, and go to state 6

    Program     go to state 7
    Statement   go to state 8
    Type        go to state 9
    Expression  go to state 10


State 1

   10 Expression: NUMBER .

    $default  reduce using rule 10 (Expression)


State 2

   11 Expression: IDENT .

    $default  reduce using rule 11 (Expression)


State 3

    2 Statement: IF . '(' Expression ')' Statement ELSE Statement

    '('  shift, and go to state 11


State 4

    6 Type: INT .

    $default  reduce using rule 6 (Type)


State 5

    7 Type: BOOL .

    $default  reduce using rule 7 (Type)


State 6

    3 Statement: '{' . StatementList '}'

    $default  reduce using rule 9 (StatementList)

    StatementList  go to state 12


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 8

    1 Program: Statement .

    $default  reduce using rule 1 (Program)


State 9

    5 Statement: Type . IDENT ';'

    IDENT  shift, and go to state 14


State 10

    4 Statement: Expression . ';'
   12 Expression: Expression . '=' Expression
   13           | Expression . '+' Expression
   14           | Expression . '<' Expression

    '='  shift, and go to state 15
    '<'  shift, and go to state 16
    '+'  shift, and go to state 17
    ';'  shift, and go to state 18


State 11

    2 Statement: IF '(' . Expression ')' Statement ELSE Statement

    NUMBER  shift, and go to state 1
    IDENT   shift, and go to state 2

    Expression  go to state 19


State 12

    3 Statement: '{' StatementList . '}'
    8 StatementList: StatementList . Statement

    NUMBER  shift, and go to state 1
    IDENT   shift, and go to state 2
    IF      shift, and go to state 3
    INT     shift, and go to state 4
    BOOL    shift, and go to state 5
    '{'     shift, and go to state 6
    '}'     shift, and go to state 20

    Statement   go to state 21
    Type        go to state 9
    Expression  go to state 10


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    5 Statement: Type IDENT . ';'

    ';'  shift, and go to state 22


State 15

   12 Expression: Expression '=' . Expression

    NUMBER  shift, and go to state 1
    IDENT   shift, and go to state 2

    Expression  go to state 23


State 16

   14 Expression: Expression '<' . Expression

    NUMBER  shift, and go to state 1
    IDENT   shift, and go to state 2

    Expression  go to state 24


State 17

   13 Expression: Expression '+' . Expression

    NUMBER  shift, and go to state 1
    IDENT   shift, and go to state 2

    Expression  go to state 25


State 18

    4 Statement: Expression ';' .

    $default  reduce using rule 4 (Statement)


State 19

    2 Statement: IF '(' Expression . ')' Statement ELSE Statement
   12 Expression: Expression . '=' Expression
   13           | Expression . '+' Expression
   14           | Expression . '<' Expression

    '='  shift, and go to state 15
    '<'  shift, and go to state 16
    '+'  shift, and go to state 17
    ')'  shift, and go to state 26


State 20

    3 Statement: '{' StatementList '}' .

    $default  reduce using rule 3 (Statement)


State 21

    8 StatementList: StatementList Statement .

    $default  reduce using rule 8 (StatementList)


State 22

    5 Statement: Type IDENT ';' .

    $default  reduce using rule 5 (Statement)


State 23

   12 Expression: Expression . '=' Expression
   12           | Expression '=' Expression .
   13           | Expression . '+' Expression
   14           | Expression . '<' Expression

    '<'  shift, and go to state 16
    '+'  shift, and go to state 17

    $default  reduce using rule 12 (Expression)


State 24

   12 Expression: Expression . '=' Expression
   13           | Expression . '+' Expression
   14           | Expression . '<' Expression
   14           | Expression '<' Expression .

    '+'  shift, and go to state 17

    '<'  error (nonassociative)

    $default  reduce using rule 14 (Expression)


State 25

   12 Expression: Expression . '=' Expression
   13           | Expression . '+' Expression
   13           | Expression '+' Expression .
   14           | Expression . '<' Expression

    $default  reduce using rule 13 (Expression)


State 26

    2 Statement: IF '(' Expression ')' . Statement ELSE Statement

    NUMBER  shift, and go to state 1
    IDENT   shift, and go to state 2
    IF      shift, and go to state 3
    INT     shift, and go to state 4
    BOOL    shift, and go to state 5
    '{'     shift, and go to state 6

    Statement   go to state 27
    Type        go to state 9
    Expression  go to state 10


State 27

    2 Statement: IF '(' Expression ')' Statement . ELSE Statement

    ELSE  shift, and go to state 28


State 28

    2 Statement: IF '(' Expression ')' Statement ELSE . Statement

    NUMBER  shift, and go to state 1
    IDENT   shift, and go to state 2
    IF      shift, and go to state 3
    INT     shift, and go to state 4
    BOOL    shift, and go to state 5
    '{'     shift, and go to state 6

    Statement   go to state 29
    Type        go to state 9
    Expression  go to state 10


State 29

    2 Statement: IF '(' Expression ')' Statement ELSE Statement .

    $default  reduce using rule 2 (Statement)
